# ChangeLog for sci-calculators/wcalc
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-calculators/wcalc/ChangeLog,v 1.7 2008/01/27 15:41:02 grobian Exp $

  27 Jan 2008; Fabian Groffen <grobian@gentoo.org> wcalc-2.2.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Jan 2008; Steve Dibb <beandog@gentoo.org> wcalc-2.2.1.ebuild:
  amd64 stable

  04 Feb 2007; nixnut <nixnut@gentoo.org> wcalc-2.2.1.ebuild:
  Added ~ppc wrt bug 163538

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -wcalc-1.7.ebuild:
  QA: Removed unused versions.

*wcalc-2.2.1 (12 Mar 2006)

  12 Mar 2006; Markus Dittrich <markusle@gentoo.org> +wcalc-2.2.1.ebuild:
  Version bump. Thanks much to Jussi Sainio <jusic@mbnet.fi> for
  his ebuild. This fixes bug #125477.

*wcalc-1.7 (24 Dec 2004)

  24 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +wcalc-1.7.ebuild:
  Moved from app-sci/wcalc to sci-calculators/wcalc.

  06 Dec 2004; Hasan Khalil <gongloo@gentoo.org> wcalc-1.7.ebuild:
  Added ~ppc-macos

  21 Nov 2004; Karol Wojtaszek <sekretarz@gentoo.org> wcalc-1.7.ebuild:
  Added to ~amd64, bug #71857

*wcalc-1.7 (17 May 2004)

  17 May 2004; Patrick Kursawe <phosphan@gentoo.org> metadata.xml,
  wcalc-1.7.ebuild:
  Initial ebuild by the <the@weird-birds.org> and olivier.fisette@sympatico.ca,
  bug #27043
