@@ -1,16 +1,34 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Wcalc-2.2.1.tar.bz2 214551 RMD160 5e85db0548028fb321986f3bac62bf6c28af59c1 SHA1 08b606cdc7dc8cb66f11327b5c7530698be5ad6a SHA256 82d3ed064c934a7791e8866f7ac25f2a600c2b435b5551101a2897b78d47a9af
+DIST Wcalc-2.3.tar.bz2 272188 RMD160 d0c246cda018a7ea1fdf19a9a5cb0f669943b110 SHA1 b71218a54644558de694a6948e4fe215227affd5 SHA256 269ba72a94fb0e204ae1c66bc3dad23f8697469bca6a6588ebd0afdea9d799fb
 EBUILD wcalc-2.2.1.ebuild 871 RMD160 e59b94d9c50a098762ca1328890961557d06e5cd SHA1 dae306dc393cbe4874b65280c3e971b6eddc793c SHA256 baef7d224337bd7e8e01754513ad368a266091c6b0b89a2d78ce58bb39398b6d
 MD5 f605f615979680f459247b136147e90a wcalc-2.2.1.ebuild 871
 RMD160 e59b94d9c50a098762ca1328890961557d06e5cd wcalc-2.2.1.ebuild 871
 SHA256 baef7d224337bd7e8e01754513ad368a266091c6b0b89a2d78ce58bb39398b6d wcalc-2.2.1.ebuild 871
-MISC ChangeLog 1384 RMD160 d4799c6088cc23b76ac6884765629b0b0df671b7 SHA1 7641ba8c9f86a22f03b9a831bf22c85d54406299 SHA256 59043080889404abcb2276a96e894f66c369ee3be25aa9cc2044af9a597ed9c5
-MD5 ed9bd1934fad1ef3ce70c7c395e9512e ChangeLog 1384
-RMD160 d4799c6088cc23b76ac6884765629b0b0df671b7 ChangeLog 1384
-SHA256 59043080889404abcb2276a96e894f66c369ee3be25aa9cc2044af9a597ed9c5 ChangeLog 1384
-MISC metadata.xml 629 RMD160 aa20e1d7d1c3ca59c270fa39f3d694be7c9422e7 SHA1 df8078c37d56d504d68f608622a0ec2257fa1734 SHA256 440966f47213480ae1b9e1b9c3547681f844d3cc4ac71a485c02496fe74861e5
-MD5 ab159e23c00e4e2469bb8bd8db426595 metadata.xml 629
-RMD160 aa20e1d7d1c3ca59c270fa39f3d694be7c9422e7 metadata.xml 629
-SHA256 440966f47213480ae1b9e1b9c3547681f844d3cc4ac71a485c02496fe74861e5 metadata.xml 629
+EBUILD wcalc-2.3.ebuild 885 RMD160 f18b362f8e86b88acf47cb5c62e8e6fbda4baac8 SHA1 5e3af51de99c4e2cb518ef93f4bf3b7b038250d8 SHA256 41a9f8432d46cdb9834c874a558d4a52bf91232b0f8125e405157f3e02db1145
+MD5 f55387acf1026675f6a97f9b8556289f wcalc-2.3.ebuild 885
+RMD160 f18b362f8e86b88acf47cb5c62e8e6fbda4baac8 wcalc-2.3.ebuild 885
+SHA256 41a9f8432d46cdb9834c874a558d4a52bf91232b0f8125e405157f3e02db1145 wcalc-2.3.ebuild 885
+MISC ChangeLog 1538 RMD160 aed501783654a898697aabda7ea77ece9166a098 SHA1 9df0eb0cd8e5dbd0eb79feb85434ac51252e82f7 SHA256 42854a28dae485c5c236c3e9992dbbdb0e18097a28df7e68687af09faa67c0c8
+MD5 799816e34ec2517b8badbc7ea9cb1f41 ChangeLog 1538
+RMD160 aed501783654a898697aabda7ea77ece9166a098 ChangeLog 1538
+SHA256 42854a28dae485c5c236c3e9992dbbdb0e18097a28df7e68687af09faa67c0c8 ChangeLog 1538
+MISC metadata.xml 636 RMD160 e27822e05e95f1a31bc07cf546c7a9955bb0575e SHA1 274ab444035d8ecf08b5623a38edf82c4c277e25 SHA256 c1116175347a8394edff2060bc227ae50c7852e3bfaa227f59bd89c5fd996004
+MD5 4923e9f31607ebe94f747a06543a785a metadata.xml 636
+RMD160 e27822e05e95f1a31bc07cf546c7a9955bb0575e metadata.xml 636
+SHA256 c1116175347a8394edff2060bc227ae50c7852e3bfaa227f59bd89c5fd996004 metadata.xml 636
 MD5 807705390491a0209add1b6e3f95212a files/digest-wcalc-2.2.1 238
 RMD160 1a090aa79d05e19554da0277c76d5f7878a18aa0 files/digest-wcalc-2.2.1 238
 SHA256 c10e35ac716ce3e49f0f67e7fdc11d56d4df37f83d2667b425be5d7110926d43 files/digest-wcalc-2.2.1 238
+MD5 ed14c9111109f83f7924bbcb0ae7c258 files/digest-wcalc-2.3 232
+RMD160 5cbec9232623bbbaa02aff02f037b97ecc8b6392 files/digest-wcalc-2.3 232
+SHA256 f2e496535a7efd920627aec98cf02deccce43664d72de8e1abfeeddebc6c0c47 files/digest-wcalc-2.3 232
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHnxvd1ycZbhPLE2ARAlljAJ96Xf2hgP3RSe0Ghi3fdfcM9KQo+ACgmkA3
+zla0+a59/nBXcTs4If45AcQ=
+=d2U+
+-----END PGP SIGNATURE-----
