@@ -1,0 +1,3 @@
+MD5 867d370533e0409c2216b588bbb31e2f Wcalc-2.3.tar.bz2 272188
+RMD160 d0c246cda018a7ea1fdf19a9a5cb0f669943b110 Wcalc-2.3.tar.bz2 272188
+SHA256 269ba72a94fb0e204ae1c66bc3dad23f8697469bca6a6588ebd0afdea9d799fb Wcalc-2.3.tar.bz2 272188
