@@ -1,6 +1,12 @@
 # ChangeLog for sci-calculators/wcalc
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-calculators/wcalc/ChangeLog,v 1.7 2008/01/27 15:41:02 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-calculators/wcalc/ChangeLog,v 1.8 2008/01/29 12:28:04 bicatali Exp $
+
+*wcalc-2.3 (29 Jan 2008)
+
+  29 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
+  +wcalc-2.3.ebuild:
+  Version bump, closing bug #191893
 
   27 Jan 2008; Fabian Groffen <grobian@gentoo.org> wcalc-2.2.1.ebuild:
   Dropped ppc-macos keyword, see you in prefix
